cabal-version:      2.4
name:               orf-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A parser for Olympus RAW files

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports:        https://github.com/samuel-zuk/orf-parser
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Sam Zuk
maintainer:         Samuel_Zuk@student.uml.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable orf-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Constants, Types, Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      binary >=0.8.0,
                      binary-strict >=0.4.8.0,
                      bytestring >=0.10.0
    hs-source-dirs:   app
    default-language: Haskell2010
